@@ -224,3 +224,4 @@ Aurelien Bompard
 Christoph Schell
 Andrew Elwell
 Heiti Ernits
+Sebastien Guay
